--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,1 +1,5 @@
-<p>Copyright {{ now.Year }}. All rights reserved.</p>
+<div class="container-fluid bg-dark">
+    <div class="row">
+        <span class="fs-8 text-light">Copyright {{ now.Year }}. All rights reserved.</span>
+    </div>
+</div>
