--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,2 +1,6 @@
-<h1>{{ site.Title }}</h1>
+<div class="container-fluid bg-secondary">
+    <div class="row">
+        <span class="h2 text-dark">Jeffrey Komo</span>
+    </div>
+</div>
 {{ partial "menu.html" (dict "menuID" "main" "page" .) }}
